--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </p>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-3 md:gap-5 justify-center mt-10 px-4">
         <div class="flex  bg-white space-x-1 md:space-x-5 rounded-xl shadow-lg px-2 py-3 md:px-5">
-          <img src="/img/averie-woodard-5d20kdvFCfA-unsplash.jpg" class="w-[100px] md:w-[250px] rounded-xl shadow-lg"
+          <img src="./img/averie-woodard-5d20kdvFCfA-unsplash.jpg" class="w-[100px] md:w-[250px] rounded-xl shadow-lg"
             alt="">
           <div class=" px-2 md:px-4">
             <h2 class="font-semibold text-xl md:text-2xl text-slate-800">Lorem ipsum dolor</h2>
