--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
   <section id="home" class="bg-slate-800 pb-15 pt-30">
     <div class="w-12/12 md:container mx-auto text-center flex items-center justify-center">
       <div class="px-2 md:px-4">
-        <h3 class="font-bold text-white text-3xl md:text-5xl md:mb-4 flex justify-center gap-2">Talk <span
+        <h3 class="font-bold text-white text-3xl md:text-5xl md:mb-4 flex justify-center items-center gap-2">Talk <span
             class="text-sky-500">Class </span>Do More <span class="fill-current text-sky-500 hover:text-sky-200"><svg
-              width="50" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              width="40" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <title>StackBlitz</title>
               <path d="M10.797 14.182H3.635L16.728 0l-3.525 9.818h7.162L7.272 24l3.524-9.818Z" />
             </svg></span></h3>
         <p class="text-center text-slate-400 font-semibold">Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Consequuntur voluptas nobis praesentium?</p>
-        <div class="py-12">
+        <div class="py-12 mx-auto px-4">
           <a href="#about"
             class="font-bold text-2xl md:text-4xl bg-red-700 text-slate-100 py-2 px-5 md:py-3 md:px-7 rounded-full hover:bg-red-500 hover:text-white">Lets
             Go</a>
@@ -70,8 +70,8 @@
   </section>
   <!-- end home -->
   <!-- service -->
-  <section id="service" class="bg-slate-700 md:pb-20 pb-80">
-    <div class="w-12/12 md:container mx-auto h-screen pt-10">
+  <section id="service" class="bg-slate-700 lg:pb-30 pb-80">
+    <div class="w-12/12 md:container mx-auto h-screen pt-5">
       <h3
         class="text-center text-slate-400 px-4 font-bold text-3xl md:text-5xl hover:text-slate-100 flex items-center justify-center gap-2">
         Services <span class="fill-current text-sky-500 hover:text-sky-300"><svg width="40" role="img"
@@ -84,45 +84,41 @@
         consectetur adipisicing elit. Nemo cupiditate explicabo fugit non at error magni dignissimos, cum accusamus
         natulorem5
       </p>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-3 md:gap-5 justify-center mt-10 px-4">
-        <div class="flex  bg-white space-x-1 md:space-x-5 rounded-xl shadow-lg px-2 py-3 md:px-5">
-          <img src="./img/averie-woodard-5d20kdvFCfA-unsplash.jpg" class="w-[100px] md:w-[250px] rounded-xl shadow-lg"
+      <div class="grid grid-cols-1 lg:grid-cols-2 gap-3 lg:gap-3 justify-center mt-5 px-4">
+        <div class="flex items-start bg-white space-x-1 lg:space-x-5 rounded-xl shadow-lg px-2 py-3 lg:px-5">
+          <img src="/img/averie-woodard-5d20kdvFCfA-unsplash.jpg" class="mt-2 w-[150px] h-[100px] lg:w-[250px] lg:h-[200px] rounded-xl shadow-lg"
             alt="">
-          <div class=" px-2 md:px-4">
-            <h2 class="font-semibold text-xl md:text-2xl text-slate-800">Lorem ipsum dolor</h2>
-            <p class="text-slate-400 mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod Lorem ipsum
-              dolor sit
-              amet consectetur!</p>
-            <a href="" class="bg-sky-700 py-2 px-3 md:px-5 rounded-lg text-slate-200 font-semibold">Selanjutnya</a>
+          <div class=" px-1 lg:px-4">
+            <h2 class="font-semibold text-lg lg:text-2xl text-slate-800">Lorem ipsum dolor</h2>
+            <p class=" text-slate-400 text-xs lg:text-base mb-3">Lorem ipsum dolor sit amet consectetur adipisicing 
+              !</p>
+            <a href="" class="bg-sky-700 py-2 px-3 lg:px-5 rounded-lg text-xs lg:text-base text-slate-200 font-semibold">Selanjutnya</a>
           </div>
 
         </div>
-        <div class="flex justify-center bg-white space-x-2 md:space-x-5 rounded-xl shadow-lg py-3 px-2 md:px-5">
-          <img src="./img/william-white-cF6fz9QwfrY-unsplash.jpg" class="w-[100px] md:w-[250px] rounded-xl shadow-lg" alt="">
-          <div class="px-2 md:px-4">
-            <h2 class="font-semibold text-xl md:text-2xl text-slate-800">Lorem ipsum dolor</h2>
-            <p class="text-slate-400 mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod Lorem ipsum
-              dolor sit amet consectetur!</p>
-            <a href="" class="bg-sky-700 py-2 px-3 md:px-5 rounded-lg text-slate-200 font-semibold">Selanjutnya</a>
+        <div class="flex justify-start bg-white space-x-2 lg:space-x-5 rounded-xl shadow-lg py-3 px-2 lg:px-5">
+          <img src="/img/william-white-cF6fz9QwfrY-unsplash.jpg" class="mt-2 w-[150px] h-[100px] lg:w-[250px] lg:h-[200px] rounded-xl shadow-lg" alt="">
+          <div class="px-2 lg:px-4">
+            <h2 class="font-semibold text-lg lg:text-2xl text-slate-800">Lorem ipsum dolor</h2>
+            <p class="text-slate-400 text-xs lg:text-base mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <a href="" class="bg-sky-700 py-2 px-3 lg:px-5 rounded-lg text-xs lg:text-base text-slate-200 font-semibold">Selanjutnya</a>
           </div>
 
         </div>
-        <div class="flex justify-center bg-white space-x-2 md:space-x-5 rounded-xl shadow-lg py-3 px-2 md:px-5">
-          <img src="./img/mohamed-nohassi-odxB5oIG_iA-unsplash.jpg" class="w-[100px] md:w-[250px] rounded-xl shadow-lg" alt="">
-          <div class="px-2 md:px-4">
-            <h2 class="font-semibold text-xl md:text-2xl text-slate-800">Lorem ipsum dolor</h2>
-            <p class="text-slate-400 mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod Lorem ipsum
-              dolor sit amet consectetur!</p>
-            <a href="" class="bg-sky-700 py-2 px-3 md:px-5 rounded-lg text-slate-200 font-semibold">Selanjutnya</a>
+        <div class="flex justify-start bg-white space-x-2 lg:space-x-5 rounded-xl shadow-lg py-3 px-2 lg:px-5">
+          <img src="/img/mohamed-nohassi-odxB5oIG_iA-unsplash.jpg" class="mt-2 w-[150px] h-[100px] lg:w-[250px] lg:h-[200px] rounded-xl shadow-lg" alt="">
+          <div class="px-2 lg:px-4">
+            <h2 class="font-semibold text-lg lg:text-2xl text-slate-800">Lorem ipsum dolor</h2>
+            <p class=" text-slate-400 text-xs lg:text-base mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <a href="" class="bg-sky-700 py-2 px-3 lg:px-5 rounded-lg text-xs lg:text-base text-slate-200 font-semibold">Selanjutnya</a>
           </div>
         </div>
-        <div class="flex justify-center bg-white space-x-2 md:space-x-5 rounded-xl shadow-lg py-3 px-2 md:px-5">
-          <img src="./img/nathan-mcbride-RP6Ba_6U154-unsplash.jpg" class="w-[100px] md:w-[250px] rounded-xl shadow-lg" alt="">
-          <div class="px-2 md:px-4">
-            <h2 class="font-semibold text-xl md:text-2xl text-slate-800">Lorem ipsum.</h2>
-            <p class="text-slate-400 mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod Lorem ipsum
-              dolor sit amet consectetur!</p>
-            <a href="" class="bg-sky-700 py-2 px-3 md:px-5 rounded-lg text-slate-200 font-semibold">Selanjutnya</a>
+        <div class="flex justify-start bg-white space-x-2 lg:space-x-5 rounded-xl shadow-lg py-3 px-2 lg:px-5">
+          <img src="/img/nathan-mcbride-RP6Ba_6U154-unsplash.jpg" class=" mt-2 w-[150px] h-[100px] lg:w-[250px] lg:h-[200px] rounded-xl shadow-lg" alt="">
+          <div class="px-2 lg:px-4">
+            <h2 class="font-semibold text-lg lg:text-2xl text-slate-800">Lorem ipsum.</h2>
+            <p class="text-slate-400 text-xs lg:text-base mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <a href="" class="bg-sky-700 py-2 px-3 lg:px-5 rounded-lg text-xs lg:text-base text-slate-200 font-semibold">Selanjutnya</a>
           </div>
         </div>
       </div>
@@ -146,25 +142,25 @@
       <div class="grid grid-cols-2 px-2 md:px-4 md:grid-cols-4 mx-auto gap-2 md:gap-5">
         <div class="rounded-lg shadow-lg py-2 px-4 bg-slate-500 hover:bg-slate-300 hover:text-slate-500">
           <a href="#" class="">
-            <img src="./img/averie-woodard-5d20kdvFCfA-unsplash.jpg" alt="" class="w-full rounded-lg">
+            <img src="/img/averie-woodard-5d20kdvFCfA-unsplash.jpg" alt="" class="w-full rounded-lg">
             <h3 class="text-center text-2xl font-bold text-slate-400 py-3">Java Script</h3>
           </a>
         </div>
         <div class="rounded-lg shadow-lg py-2 px-4 bg-slate-500 hover:bg-slate-300">
           <a href="#" class="">
-            <img src="./img/becca-tapert--A_Sx8GrRWg-unsplash.jpg" alt="" class="w-full rounded-lg">
+            <img src="/img/becca-tapert--A_Sx8GrRWg-unsplash.jpg" alt="" class="w-full rounded-lg">
             <h3 class="text-center text-2xl font-bold text-slate-400 py-3">PHP</h3>
           </a>
         </div>
         <div class="rounded-lg shadow-lg py-2 px-4 bg-slate-500 hover:bg-slate-300 hover:text-slate-500">
           <a href="#" class="">
-            <img src="./img/mohamed-nohassi-odxB5oIG_iA-unsplash.jpg" alt="" class="w-full rounded-lg">
+            <img src="/img/mohamed-nohassi-odxB5oIG_iA-unsplash.jpg" alt="" class="w-full rounded-lg">
             <h3 class="text-center text-2xl font-bold text-slate-400 py-3">Python</h3>
           </a>
         </div>
         <div class="rounded-lg shadow-lg py-2 px-4 bg-slate-500 hover:bg-slate-300 hover:text-slate-500">
           <a href="#" class="">
-            <img src="./img/william-white-cF6fz9QwfrY-unsplash.jpg" alt="" class="w-full rounded-lg">
+            <img src="/img/william-white-cF6fz9QwfrY-unsplash.jpg" alt="" class="w-full rounded-lg">
             <h3 class="text-center text-2xl font-bold text-slate-400 py-3">Java</h3>
           </a>
         </div>
@@ -178,8 +174,8 @@
   <section id="about" class="bg-slate-700 pt-7 pb-5">
     <div class="md:container px-2 mx-auto">
       <div class="w-full md:flex justify-center gap-8">
-        <img src="./img/averie-woodard-5d20kdvFCfA-unsplash.jpg" alt=""class="w-[300px] md:w-[400px] mx-auto rounded-lg"
-          class="w-[400px] rounded-[100%] border-4 border-slate-300">
+        <img src="/img/averie-woodard-5d20kdvFCfA-unsplash.jpg" alt=""class="w-[400px] h-[350] md:w-[400px] md:h-[350px] mx-auto rounded-lg"
+          class=" rounded-lg border-4 border-slate-300">
         <div class="px-5 border-l-2 border-b-2 border-slate-200">
           <h3 class="font-bold text-3xl md:text-5xl text-slate-400 text-center pt-10 md:pt-0 mb-3">About Me</h3>
           <p class="font-medium text-md md:text-xl text-slate-500 text-center mb-5">Lorem, ipsum dolor sit amet consectetur
@@ -195,7 +191,7 @@
         </div>
 
       </div>
-      <div class="flex justify-end items-center  pt-5 gap-7">
+      <div class="flex justify-end items-center  pt-5 lg:gap-7 gap-3">
         <a href="#" class="flex justify-center items-center gap-1 fill-current text-slate-200 shadow-lg hover:text-slate-400"><span class="font-semibold">Youtube</span>
           <svg width="20" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <title>YouTube</title>
@@ -261,7 +257,7 @@
     </section>
     <!-- end footer -->
 
-  <script src="./script.js"></script>
+  <script src="/script.js"></script>
 </body>
 
 </html>
