--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </p>
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-3 lg:gap-3 justify-center mt-5 px-4">
         <div class="flex items-start bg-white space-x-1 lg:space-x-5 rounded-xl shadow-lg px-2 py-3 lg:px-5">
-          <img src="/img/averie-woodard-5d20kdvFCfA-unsplash.jpg" class="mt-2 w-[150px] h-[100px] lg:w-[250px] lg:h-[200px] rounded-xl shadow-lg"
+          <img src="./img/averie-woodard-5d20kdvFCfA-unsplash.jpg" class="mt-2 w-[150px] h-[100px] lg:w-[250px] lg:h-[200px] rounded-xl shadow-lg"
             alt="">
           <div class=" px-1 lg:px-4">
             <h2 class="font-semibold text-lg lg:text-2xl text-slate-800">Lorem ipsum dolor</h2>
@@ -97,7 +97,7 @@
 
         </div>
         <div class="flex justify-start bg-white space-x-2 lg:space-x-5 rounded-xl shadow-lg py-3 px-2 lg:px-5">
-          <img src="/img/william-white-cF6fz9QwfrY-unsplash.jpg" class="mt-2 w-[150px] h-[100px] lg:w-[250px] lg:h-[200px] rounded-xl shadow-lg" alt="">
+          <img src="./img/william-white-cF6fz9QwfrY-unsplash.jpg" class="mt-2 w-[150px] h-[100px] lg:w-[250px] lg:h-[200px] rounded-xl shadow-lg" alt="">
           <div class="px-2 lg:px-4">
             <h2 class="font-semibold text-lg lg:text-2xl text-slate-800">Lorem ipsum dolor</h2>
             <p class="text-slate-400 text-xs lg:text-base mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -106,7 +106,7 @@
 
         </div>
         <div class="flex justify-start bg-white space-x-2 lg:space-x-5 rounded-xl shadow-lg py-3 px-2 lg:px-5">
-          <img src="/img/mohamed-nohassi-odxB5oIG_iA-unsplash.jpg" class="mt-2 w-[150px] h-[100px] lg:w-[250px] lg:h-[200px] rounded-xl shadow-lg" alt="">
+          <img src="./img/mohamed-nohassi-odxB5oIG_iA-unsplash.jpg" class="mt-2 w-[150px] h-[100px] lg:w-[250px] lg:h-[200px] rounded-xl shadow-lg" alt="">
           <div class="px-2 lg:px-4">
             <h2 class="font-semibold text-lg lg:text-2xl text-slate-800">Lorem ipsum dolor</h2>
             <p class=" text-slate-400 text-xs lg:text-base mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -114,7 +114,7 @@
           </div>
         </div>
         <div class="flex justify-start bg-white space-x-2 lg:space-x-5 rounded-xl shadow-lg py-3 px-2 lg:px-5">
-          <img src="/img/nathan-mcbride-RP6Ba_6U154-unsplash.jpg" class=" mt-2 w-[150px] h-[100px] lg:w-[250px] lg:h-[200px] rounded-xl shadow-lg" alt="">
+          <img src="./img/nathan-mcbride-RP6Ba_6U154-unsplash.jpg" class=" mt-2 w-[150px] h-[100px] lg:w-[250px] lg:h-[200px] rounded-xl shadow-lg" alt="">
           <div class="px-2 lg:px-4">
             <h2 class="font-semibold text-lg lg:text-2xl text-slate-800">Lorem ipsum.</h2>
             <p class="text-slate-400 text-xs lg:text-base mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -142,25 +142,25 @@
       <div class="grid grid-cols-2 px-2 md:px-4 md:grid-cols-4 mx-auto gap-2 md:gap-5">
         <div class="rounded-lg shadow-lg py-2 px-4 bg-slate-500 hover:bg-slate-300 hover:text-slate-500">
           <a href="#" class="">
-            <img src="/img/averie-woodard-5d20kdvFCfA-unsplash.jpg" alt="" class="w-full rounded-lg">
+            <img src="./img/averie-woodard-5d20kdvFCfA-unsplash.jpg" alt="" class="w-full rounded-lg">
             <h3 class="text-center text-2xl font-bold text-slate-400 py-3">Java Script</h3>
           </a>
         </div>
         <div class="rounded-lg shadow-lg py-2 px-4 bg-slate-500 hover:bg-slate-300">
           <a href="#" class="">
-            <img src="/img/becca-tapert--A_Sx8GrRWg-unsplash.jpg" alt="" class="w-full rounded-lg">
+            <img src="./img/becca-tapert--A_Sx8GrRWg-unsplash.jpg" alt="" class="w-full rounded-lg">
             <h3 class="text-center text-2xl font-bold text-slate-400 py-3">PHP</h3>
           </a>
         </div>
         <div class="rounded-lg shadow-lg py-2 px-4 bg-slate-500 hover:bg-slate-300 hover:text-slate-500">
           <a href="#" class="">
-            <img src="/img/mohamed-nohassi-odxB5oIG_iA-unsplash.jpg" alt="" class="w-full rounded-lg">
+            <img src="./img/mohamed-nohassi-odxB5oIG_iA-unsplash.jpg" alt="" class="w-full rounded-lg">
             <h3 class="text-center text-2xl font-bold text-slate-400 py-3">Python</h3>
           </a>
         </div>
         <div class="rounded-lg shadow-lg py-2 px-4 bg-slate-500 hover:bg-slate-300 hover:text-slate-500">
           <a href="#" class="">
-            <img src="/img/william-white-cF6fz9QwfrY-unsplash.jpg" alt="" class="w-full rounded-lg">
+            <img src="./img/william-white-cF6fz9QwfrY-unsplash.jpg" alt="" class="w-full rounded-lg">
             <h3 class="text-center text-2xl font-bold text-slate-400 py-3">Java</h3>
           </a>
         </div>
@@ -174,7 +174,7 @@
   <section id="about" class="bg-slate-700 pt-7 pb-5">
     <div class="md:container px-2 mx-auto">
       <div class="w-full md:flex justify-center gap-8">
-        <img src="/img/averie-woodard-5d20kdvFCfA-unsplash.jpg" alt=""class="w-[400px] h-[350] md:w-[400px] md:h-[350px] mx-auto rounded-lg"
+        <img src="./img/averie-woodard-5d20kdvFCfA-unsplash.jpg" alt=""class="w-[400px] h-[350] md:w-[400px] md:h-[350px] mx-auto rounded-lg"
           class=" rounded-lg border-4 border-slate-300">
         <div class="px-5 border-l-2 border-b-2 border-slate-200">
           <h3 class="font-bold text-3xl md:text-5xl text-slate-400 text-center pt-10 md:pt-0 mb-3">About Me</h3>
@@ -257,7 +257,7 @@
     </section>
     <!-- end footer -->
 
-  <script src="/script.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
