--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   <section id="about" class="bg-slate-700 pt-7 pb-5">
     <div class="md:container px-2 mx-auto">
       <div class="w-full md:flex justify-center gap-8">
-        <img src="./img/averie-woodard-5d20kdvFCfA-unsplash.jpg" alt=""class="w-[400px] h-[350px] md:w-[400px] md:h-[350px] mx-auto rounded-lg"
+        <img src="./img/averie-woodard-5d20kdvFCfA-unsplash.jpg" alt=""class="w-[400px] h-[350px] lg:w-[400px] lg:h-[350px] mx-auto rounded-lg"
           class=" rounded-lg border-4 border-slate-300">
         <div class="px-5 border-l-2 border-b-2 border-slate-200">
           <h3 class="font-bold text-3xl md:text-5xl text-slate-400 text-center pt-10 md:pt-0 mb-3">About Me</h3>
