--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     </section>
     <!-- end footer -->
 
-  <script src="/script.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
