--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         consectetur adipisicing elit. Nemo cupiditate explicabo fugit non at error magni dignissimos, cum accusamus
         natulorem5
       </p>
-      <div class="grid grid-cols-1 lg:grid-cols-2 gap-3 justify-center mt-5 px-4">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-3 justify-center mt-5 px-4">
         <div class="flex items-start bg-white space-x-1 lg:space-x-5 rounded-xl shadow-lg px-2 py-3 lg:px-5">
           <img src="./img/averie-woodard-5d20kdvFCfA-unsplash.jpg" class="mt-2 w-[100px] h-[50px] lg:w-[250px] lg:h-[200px] rounded-xl shadow-lg"
             alt="">
@@ -174,7 +174,7 @@
   <section id="about" class="bg-slate-700 pt-7 pb-5">
     <div class="md:container px-2 mx-auto">
       <div class="w-full md:flex justify-center gap-8">
-        <img src="./img/averie-woodard-5d20kdvFCfA-unsplash.jpg" alt=""class="w-[400px] h-[350px] lg:w-[400px] lg:h-[350px] mx-auto rounded-lg"
+        <img src="./img/averie-woodard-5d20kdvFCfA-unsplash.jpg" alt=""class="w-[300px] h-[250px] md:w-[300px] md:h-[250px] mx-auto rounded-lg"
           class=" rounded-lg border-4 border-slate-300">
         <div class="px-5 border-l-2 border-b-2 border-slate-200">
           <h3 class="font-bold text-3xl md:text-5xl text-slate-400 text-center pt-10 md:pt-0 mb-3">About Me</h3>
