--- a/index.html
+++ b/index.html
@@ -142,25 +142,25 @@
       <div class="grid grid-cols-2 px-2 md:px-4 md:grid-cols-4 mx-auto gap-2 md:gap-5">
         <div class="rounded-lg shadow-lg py-2 px-4 bg-slate-500 hover:bg-slate-300 hover:text-slate-500">
           <a href="#" class="">
-            <img src="/img/averie-woodard-5d20kdvFCfA-unsplash.jpg" alt="" class="w-full rounded-lg">
+            <img src="./img/averie-woodard-5d20kdvFCfA-unsplash.jpg" alt="" class="w-full rounded-lg">
             <h3 class="text-center text-2xl font-bold text-slate-400 py-3">Java Script</h3>
           </a>
         </div>
         <div class="rounded-lg shadow-lg py-2 px-4 bg-slate-500 hover:bg-slate-300">
           <a href="#" class="">
-            <img src="/img/becca-tapert--A_Sx8GrRWg-unsplash.jpg" alt="" class="w-full rounded-lg">
+            <img src="./img/becca-tapert--A_Sx8GrRWg-unsplash.jpg" alt="" class="w-full rounded-lg">
             <h3 class="text-center text-2xl font-bold text-slate-400 py-3">PHP</h3>
           </a>
         </div>
         <div class="rounded-lg shadow-lg py-2 px-4 bg-slate-500 hover:bg-slate-300 hover:text-slate-500">
           <a href="#" class="">
-            <img src="/img/mohamed-nohassi-odxB5oIG_iA-unsplash.jpg" alt="" class="w-full rounded-lg">
+            <img src="./img/mohamed-nohassi-odxB5oIG_iA-unsplash.jpg" alt="" class="w-full rounded-lg">
             <h3 class="text-center text-2xl font-bold text-slate-400 py-3">Python</h3>
           </a>
         </div>
         <div class="rounded-lg shadow-lg py-2 px-4 bg-slate-500 hover:bg-slate-300 hover:text-slate-500">
           <a href="#" class="">
-            <img src="/img/william-white-cF6fz9QwfrY-unsplash.jpg" alt="" class="w-full rounded-lg">
+            <img src="./img/william-white-cF6fz9QwfrY-unsplash.jpg" alt="" class="w-full rounded-lg">
             <h3 class="text-center text-2xl font-bold text-slate-400 py-3">Java</h3>
           </a>
         </div>
