--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </div>
 
         </div>
-        <div class="flex justify-start bg-white space-x-2 lg:space-x-5 rounded-xl shadow-lg py-3 px-2 lg:px-5">
+        <div class="flex justify-center items-start bg-white space-x-2 lg:space-x-5 rounded-xl shadow-lg py-3 px-2 lg:px-5">
           <img src="./img/william-white-cF6fz9QwfrY-unsplash.jpg" class="mt-2 w-[150px] h-[100px] lg:w-[250px] lg:h-[200px] rounded-xl shadow-lg" alt="">
           <div class="px-2 lg:px-4">
             <h2 class="font-semibold text-lg lg:text-2xl text-slate-800">Lorem ipsum dolor</h2>
