--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
         consectetur adipisicing elit. Nemo cupiditate explicabo fugit non at error magni dignissimos, cum accusamus
         natulorem5
       </p>
-      <div class="grid grid-cols-1 lg:grid-cols-2 gap-3 justify-center mt-5 px-4">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-3 justify-center mt-5 px-4">
         <div class="flex justify-start bg-white space-x-1 lg:space-x-5 rounded-xl shadow-lg px-2 py-3 lg:px-5">
-         <span></span>
+         <span class="text-3xl md:text-5xl"><i class="fa-solid fa-laptop"></i></span>
           <div class=" px-1 lg:px-4">
             <h2 class="font-semibold text-lg lg:text-2xl text-slate-800">Lorem ipsum dolor</h2>
             <p class=" text-slate-400 text-xs lg:text-base mb-3">Lorem ipsum dolor sit amet consectetur adipisicing 
@@ -95,7 +95,7 @@
 
         </div>
         <div class="flex justify-start bg-white space-x-2 lg:space-x-5 rounded-xl shadow-lg py-3 px-2 lg:px-5">
-         <span></span>
+          <span class="text-3xl md:text-5xl"><i class="fa-solid fa-laptop"></i></span>
           <div class="px-2 lg:px-4">
             <h2 class="font-semibold text-lg lg:text-2xl text-slate-800">Lorem ipsum dolor</h2>
             <p class="text-slate-400 text-xs lg:text-base mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -104,7 +104,7 @@
 
         </div>
         <div class="flex justify-start bg-white space-x-2 lg:space-x-5 rounded-xl shadow-lg py-3 px-2 lg:px-5">
-        <span></span>
+        <span class="text-3xl md:text-5xl"><i class="fa-solid fa-laptop"></i></span>
           <div class="px-2 lg:px-4">
             <h2 class="font-semibold text-lg lg:text-2xl text-slate-800">Lorem ipsum dolor</h2>
             <p class=" text-slate-400 text-xs lg:text-base mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -112,7 +112,7 @@
           </div>
         </div>
         <div class="flex justify-start bg-white space-x-2 lg:space-x-5 rounded-xl shadow-lg py-3 px-2 lg:px-5">
-          <span></span>
+           <span class="text-3xl md:text-5xl"><i class="fa-solid fa-laptop"></i></span>
           <div class="px-2 lg:px-4">
             <h2 class="font-semibold text-lg lg:text-2xl text-slate-800">Lorem ipsum.</h2>
             <p class="text-slate-400 text-xs lg:text-base mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
