--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <!-- end home -->
   <!-- service -->
   <section id="service" class="bg-slate-700 lg:pb-30 pb-20">
-    <div class="w-12/12 md:container mx-auto pb-20 pt-5">
+    <div class="w-12/12 md:container mx-auto pt-5">
       <h3 class="text-center text-slate-400 px-4 font-bold text-3xl md:text-5xl hover:text-slate-100 flex items-center justify-center gap-2">
         Services <span class="fill-current text-sky-500 hover:text-sky-300"><svg width="40" role="img"
             viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
